--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ body {
   font-family: "Poppins", sans-serif;
   background-color: #f6faff;
   overflow-x: hidden;
-  margin-bottom: 1000px;
 }
 
 nav {
@@ -125,9 +124,11 @@ nav .menuTogle::after {
 }
 .jumbotron::after {
   content: "";
+  top: 0;
+  background-color: #464646;
   display: block;
   width: 80%;
-  height: 100%;
+  height: inherit;
   margin-bottom: 0;
   background: #e6e5e5;
   background: linear-gradient(to left, rgba(0, 0, 0, 0) 5%, white 100%);
@@ -708,31 +709,35 @@ section .portfolio .container .warp-card .row {
   height: auto;
   height: 400px;
   cursor: pointer;
-  border-radius: 10px;
-  background-color: #f6faff;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  border-radius: 60px 0px 60px 0px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
 }
 section .portfolio .container .warp-card .row:hover {
   transform: scale(1.02);
   transition: 0.5s;
 }
-section .portfolio .container .warp-card .row .col-01 .back-banner {
-  position: relative;
-  height: 280px;
-  z-index: 2;
+section .portfolio .container .warp-card .row .col-01 {
+  overflow: hidden;
+  height: 240px;
+  background-color: #f1f102;
 }
-section .portfolio .container .warp-card .row .col-01 .back-banner img {
-  border-radius: 10px 10px 0px 0px;
-  width: 100%;
-  height: 250px;
+section .portfolio .container .warp-card .row .col-01 img {
+  border-radius: 60px 0px 0px 0px;
+  width: 350px;
+  height: auto;
 }
-section .portfolio .container .warp-card .row .col-01 .content {
+section .portfolio .container .warp-card .row .col-content {
+  padding-top: 20px;
+  height: auto;
+}
+section .portfolio .container .warp-card .row .col-content .content {
   width: auto;
   display: block;
   width: 90%;
   margin-left: 15px;
 }
-section .portfolio .container .warp-card .row .col-01 .content h3 {
+section .portfolio .container .warp-card .row .col-content .content h3 {
   text-align: left;
   font-weight: normal;
   font-family: "Kanit", sans-serif;
@@ -740,44 +745,64 @@ section .portfolio .container .warp-card .row .col-01 .content h3 {
   text-transform: capitalize;
   font-size: 1.6em;
 }
-section .portfolio .container .warp-card .row .col-01 .content p {
+section .portfolio .container .warp-card .row .col-content .content p {
   display: inline-block;
   text-align: left;
   width: auto;
   font-size: 0.9em;
 }
-section .portfolio .container .warp-card .row .col-01 .content h4 {
+section .portfolio .container .warp-card .row .col-content .content h4 {
   display: flex;
   font-size: 0.9em;
   margin-top: 20px;
   text-transform: capitalize;
 }
-section .portfolio .container .warp-card .row .col-01 .content h4 a {
+section .portfolio .container .warp-card .row .col-content .content h4 a {
   font-weight: normal;
   color: #0000ff;
   text-decoration: none;
 }
-section .portfolio .container .warp-card .row .col-01 .content h4 img {
+section .portfolio .container .warp-card .row .col-content .content h4 img {
   margin-left: 8px;
   width: 15px;
   height: auto;
 }
-section .portfolio .container .warp-card .row .col-02 .back-banner {
-  position: relative;
-  height: 280px;
-  z-index: 2;
+section .portfolio .container .warp-card .row {
+  display: block;
+  width: 25%;
+  margin-top: 10vh;
+  height: auto;
+  height: 400px;
+  cursor: pointer;
+  border-radius: 60px 0px 60px 0px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
 }
-section .portfolio .container .warp-card .row .col-02 .back-banner img {
-  border-radius: 10px 10px 0px 0px;
-  width: 100%;
-  height: 250px;
+section .portfolio .container .warp-card .row:hover {
+  transform: scale(1.02);
+  transition: 0.5s;
 }
-section .portfolio .container .warp-card .row .col-02 .content {
+section .portfolio .container .warp-card .row .col-02 {
+  overflow: hidden;
+  height: 240px;
+  background-color: #f1f102;
+}
+section .portfolio .container .warp-card .row .col-02 img {
+  border-radius: 60px 0px 0px 0px;
+  width: 350px;
+  height: auto;
+}
+section .portfolio .container .warp-card .row .col-content {
+  padding-top: 20px;
+  height: auto;
+}
+section .portfolio .container .warp-card .row .col-content .content {
+  width: auto;
   display: block;
   width: 90%;
   margin-left: 15px;
 }
-section .portfolio .container .warp-card .row .col-02 .content h3 {
+section .portfolio .container .warp-card .row .col-content .content h3 {
   text-align: left;
   font-weight: normal;
   font-family: "Kanit", sans-serif;
@@ -785,44 +810,64 @@ section .portfolio .container .warp-card .row .col-02 .content h3 {
   text-transform: capitalize;
   font-size: 1.6em;
 }
-section .portfolio .container .warp-card .row .col-02 .content p {
+section .portfolio .container .warp-card .row .col-content .content p {
   display: inline-block;
   text-align: left;
   width: auto;
   font-size: 0.9em;
 }
-section .portfolio .container .warp-card .row .col-02 .content h4 {
+section .portfolio .container .warp-card .row .col-content .content h4 {
   display: flex;
   font-size: 0.9em;
   margin-top: 20px;
   text-transform: capitalize;
 }
-section .portfolio .container .warp-card .row .col-02 .content h4 a {
+section .portfolio .container .warp-card .row .col-content .content h4 a {
   font-weight: normal;
   color: #0000ff;
   text-decoration: none;
 }
-section .portfolio .container .warp-card .row .col-02 .content h4 img {
+section .portfolio .container .warp-card .row .col-content .content h4 img {
   margin-left: 8px;
   width: 15px;
   height: auto;
 }
-section .portfolio .container .warp-card .row .col-03 .back-banner {
-  position: relative;
-  height: 280px;
-  z-index: 2;
+section .portfolio .container .warp-card .row {
+  display: block;
+  width: 25%;
+  margin-top: 10vh;
+  height: auto;
+  height: 400px;
+  cursor: pointer;
+  border-radius: 60px 0px 60px 0px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
 }
-section .portfolio .container .warp-card .row .col-03 .back-banner img {
-  border-radius: 10px 10px 0px 0px;
-  width: 100%;
-  height: 250px;
+section .portfolio .container .warp-card .row:hover {
+  transform: scale(1.02);
+  transition: 0.5s;
 }
-section .portfolio .container .warp-card .row .col-03 .content {
+section .portfolio .container .warp-card .row .col-03 {
+  overflow: hidden;
+  height: 240px;
+  background-color: #f1f102;
+}
+section .portfolio .container .warp-card .row .col-03 img {
+  border-radius: 60px 0px 0px 0px;
+  width: 350px;
+  height: auto;
+}
+section .portfolio .container .warp-card .row .col-content {
+  padding-top: 20px;
+  height: auto;
+}
+section .portfolio .container .warp-card .row .col-content .content {
+  width: auto;
   display: block;
   width: 90%;
   margin-left: 15px;
 }
-section .portfolio .container .warp-card .row .col-03 .content h3 {
+section .portfolio .container .warp-card .row .col-content .content h3 {
   text-align: left;
   font-weight: normal;
   font-family: "Kanit", sans-serif;
@@ -830,26 +875,170 @@ section .portfolio .container .warp-card .row .col-03 .content h3 {
   text-transform: capitalize;
   font-size: 1.6em;
 }
-section .portfolio .container .warp-card .row .col-03 .content p {
+section .portfolio .container .warp-card .row .col-content .content p {
   display: inline-block;
   text-align: left;
   width: auto;
   font-size: 0.9em;
 }
-section .portfolio .container .warp-card .row .col-03 .content h4 {
+section .portfolio .container .warp-card .row .col-content .content h4 {
   display: flex;
   font-size: 0.9em;
   margin-top: 20px;
   text-transform: capitalize;
 }
-section .portfolio .container .warp-card .row .col-03 .content h4 a {
+section .portfolio .container .warp-card .row .col-content .content h4 a {
   font-weight: normal;
   color: #0000ff;
   text-decoration: none;
 }
-section .portfolio .container .warp-card .row .col-03 .content h4 img {
+section .portfolio .container .warp-card .row .col-content .content h4 img {
   margin-left: 8px;
   width: 15px;
+  height: auto;
+}
+
+.judul {
+  padding-top: 20vh;
+  text-align: center;
+  color: #0a002c;
+}
+.judul h1 {
+  font-family: "Kanit", sans-serif;
+  font-size: 3em;
+  color: #0a002c;
+}
+.judul h3 {
+  font-family: "Poppins", sans-serif;
+  font-weight: normal;
+  font-size: 1.3em;
+  color: #464646;
+}
+.judul h3 span {
+  display: block;
+  border-bottom: 0.1rem solid #107020;
+  padding-bottom: 0vh;
+  width: 8em;
+  margin: 0 auto;
+  top: 0;
+  height: 0;
+}
+.judul h3 span::after {
+  content: "";
+  color: #0a002c;
+  position: absolute;
+  display: inherit;
+  border-bottom: 0.1rem solid;
+  padding-bottom: 0vh;
+  width: 4em;
+  z-index: 10;
+}
+
+footer {
+  margin-top: 10vh;
+  width: 100%;
+  height: 400px;
+  background-color: #0a002c;
+  overflow: hidden;
+}
+footer .content {
+  display: flex;
+  justify-content: space-evenly;
+}
+footer .content .contact {
+  padding-left: 40px;
+  margin-top: 50px;
+  display: block;
+  width: 250px;
+  margin: 10;
+}
+footer .content .contact .telp {
+  color: #ffffff;
+}
+footer .content .contact .telp .contact-person h3 {
+  font-size: 0.8em;
+}
+footer .content .contact .telp .contact-person p {
+  font-size: 0.6em;
+}
+footer .content .contact .linkedin {
+  margin: 30px auto;
+  color: #ffffff;
+}
+footer .content .contact .linkedin .contact-person h3 {
+  font-size: 0.8em;
+}
+footer .content .contact .linkedin .contact-person p {
+  font-size: 0.6em;
+}
+footer .content .contact .git {
+  color: #ffffff;
+}
+footer .content .contact .git .contact-person h3 {
+  font-size: 0.8em;
+}
+footer .content .contact .git .contact-person p {
+  font-size: 0.6em;
+}
+footer .content .contact img {
+  padding-top: 10px;
+  float: left;
+  width: 10%;
+  margin-right: 25px;
+}
+footer .content .contact-form form {
+  display: block;
+  box-sizing: border-box;
+  margin-top: 50px;
+}
+footer .content .contact-form form input {
+  width: 45%;
+  float: left;
+  margin-right: 21px;
+  padding: 12px;
+  color: #0a002c;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  color: #0a002c;
+  box-sizing: border-box;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+footer .content .contact-form form textarea {
+  padding: 12px;
+  width: 90%;
+  height: 150px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  color: #0a002c;
+  margin-top: 6px;
+  margin-bottom: 16px;
+}
+footer .content .contact-form form button {
+  background-color: #04aa6d;
+  width: 40%;
+  color: white;
+  padding: 12px 5px;
+  border: none;
+  font-weight: 100;
+  border-radius: 6px;
+  cursor: pointer;
+  float: left;
+  font-size: 1.1em;
+}
+footer .content .contact-form form button:hover {
+  background-color: #45a049;
+}
+footer .content .contact-form form button img {
+  margin-left: 10px;
+  width: 7%;
+}
+footer .foto {
+  display: flex;
+  height: auto;
+}
+footer .foto img {
+  width: 82%;
   height: auto;
 }
 
@@ -970,55 +1159,82 @@ section .portfolio .container .warp-card .row .col-03 .content h4 img {
   }
   section .portfolio .container .warp-card .row {
     display: block;
-    width: 80%;
+    width: auto;
   }
   section .portfolio .container .warp-card .row .col-01 {
+    width: auto;
+  }
+  section .portfolio .container .warp-card .row .col-01 img {
     width: 100%;
   }
-  section .portfolio .container .warp-card .row .col-01 .back-banner {
+  section .portfolio .container .warp-card .row .col-content {
     max-width: 670px;
     width: 100%;
   }
-  section .portfolio .container .warp-card .row .col-01 .content {
+  section .portfolio .container .warp-card .row .col-content .content {
     width: auto;
   }
-  section .portfolio .container .warp-card .row .col-01 .content p {
+  section .portfolio .container .warp-card .row .col-content .content p {
     font-size: 1.1em;
   }
-  section .portfolio .container .warp-card .row .col-01 .content h4 {
+  section .portfolio .container .warp-card .row .col-content .content h4 {
     margin-top: 10px;
+  }
+  section .portfolio .container .warp-card .row {
+    display: block;
+    width: auto;
   }
   section .portfolio .container .warp-card .row .col-02 {
-    width: 100%;
+    width: auto;
   }
-  section .portfolio .container .warp-card .row .col-02 .back-banner {
+  section .portfolio .container .warp-card .row .col-02 img {
+    width: 100% !important;
+  }
+  section .portfolio .container .warp-card .row .col-content {
     max-width: 670px;
     width: 100%;
   }
-  section .portfolio .container .warp-card .row .col-02 .back-banner .content {
+  section .portfolio .container .warp-card .row .col-content .content {
     width: auto;
   }
-  section .portfolio .container .warp-card .row .col-02 .back-banner .content p {
+  section .portfolio .container .warp-card .row .col-content .content p {
     font-size: 1.1em;
   }
-  section .portfolio .container .warp-card .row .col-02 .back-banner .content h4 {
+  section .portfolio .container .warp-card .row .col-content .content h4 {
     margin-top: 10px;
+  }
+  section .portfolio .container .warp-card .row {
+    display: block;
+    width: auto;
   }
   section .portfolio .container .warp-card .row .col-03 {
+    width: auto;
+  }
+  section .portfolio .container .warp-card .row .col-03 img {
     width: 100%;
   }
-  section .portfolio .container .warp-card .row .col-03 .back-banner {
+  section .portfolio .container .warp-card .row .col-content {
     max-width: 670px;
     width: 100%;
   }
-  section .portfolio .container .warp-card .row .col-03 .back-banner .content {
+  section .portfolio .container .warp-card .row .col-content .content {
     width: auto;
   }
-  section .portfolio .container .warp-card .row .col-03 .back-banner .content p {
+  section .portfolio .container .warp-card .row .col-content .content p {
     font-size: 1.1em;
   }
-  section .portfolio .container .warp-card .row .col-03 .back-banner .content h4 {
+  section .portfolio .container .warp-card .row .col-content .content h4 {
     margin-top: 10px;
+  }
+
+  footer .content {
+    margin-top: -25px;
+  }
+  footer .content .contact-form form textarea {
+    height: 120px;
+  }
+  footer .content .foto {
+    display: none;
   }
 }
 @media screen and (max-width: 420px) {
@@ -1084,50 +1300,132 @@ section .jumbotron .content p {
   section .skills .content-skill .warp-content .content-desain .desain .d-code h2 {
     padding-right: 10px;
   }
-  section .portfolio .container .warp-card .row .col-01 .back-banner img {
+  section .portfolio .container .warp-card .row {
+    display: block;
+    width: auto;
+  }
+  section .portfolio .container .warp-card .row .col-01 {
+    width: auto;
+  }
+  section .portfolio .container .warp-card .row .col-01 img {
     width: 100%;
   }
-  section .portfolio .container .warp-card .row .col-01 .content p {
+  section .portfolio .container .warp-card .row .col-content .content p {
     display: block;
     width: 95%;
     font-size: 0.8em;
   }
-  section .portfolio .container .warp-card .row .col-01 .content h4 {
-    font-size: 0.7em;
+  section .portfolio .container .warp-card .row .col-content .content h4 {
+    font-size: 0.8em;
     margin-top: 12px;
   }
-  section .portfolio .container .warp-card .row .col-01 .content h4 img {
-    width: 10px;
+  section .portfolio .container .warp-card .row .col-content .content h4 img {
+    width: 12px;
   }
-  section .portfolio .container .warp-card .row .col-02 .back-banner img {
-    width: 100%;
+  section .portfolio .container .warp-card .row {
+    display: block;
+    width: auto;
   }
-  section .portfolio .container .warp-card .row .col-02 .back-banner .content p {
+  section .portfolio .container .warp-card .row .col-02 {
+    width: auto;
+  }
+  section .portfolio .container .warp-card .row .col-02 img {
+    width: 140% !important;
+  }
+  section .portfolio .container .warp-card .row .col-content .content p {
     display: block;
     width: 95%;
     font-size: 0.8em;
   }
-  section .portfolio .container .warp-card .row .col-02 .back-banner .content h4 {
-    font-size: 0.7em;
+  section .portfolio .container .warp-card .row .col-content .content h4 {
+    font-size: 0.8em;
     margin-top: 12px;
   }
-  section .portfolio .container .warp-card .row .col-02 .back-banner .content h4 img {
-    width: 10px;
+  section .portfolio .container .warp-card .row .col-content .content h4 img {
+    width: 12px;
   }
-  section .portfolio .container .warp-card .row .col-03 .back-banner img {
+  section .portfolio .container .warp-card .row {
+    display: block;
+    width: auto;
+  }
+  section .portfolio .container .warp-card .row .col-01 {
+    width: auto;
+  }
+  section .portfolio .container .warp-card .row .col-01 img {
     width: 100%;
   }
-  section .portfolio .container .warp-card .row .col-03 .back-banner .content p {
+  section .portfolio .container .warp-card .row .col-content .content p {
     display: block;
     width: 95%;
     font-size: 0.8em;
   }
-  section .portfolio .container .warp-card .row .col-03 .back-banner .content h4 {
-    font-size: 0.7em;
+  section .portfolio .container .warp-card .row .col-content .content h4 {
+    font-size: 0.8em;
     margin-top: 12px;
   }
-  section .portfolio .container .warp-card .row .col-03 .back-banner .content h4 img {
-    width: 10px;
+  section .portfolio .container .warp-card .row .col-content .content h4 img {
+    width: 12px;
+  }
+
+  footer .content {
+    margin-top: -25px;
+    display: contents;
+  }
+  footer .content .contact {
+    margin-top: 10px;
+    width: auto;
+    height: 50px;
+    display: flex;
+    justify-content: space-around;
+  }
+  footer .content .contact .telp {
+    width: 30%;
+  }
+  footer .content .contact .telp .contact-person h3 {
+    font-size: 0.8em;
+  }
+  footer .content .contact .telp .contact-person p {
+    font-size: 0.6em;
+  }
+  footer .content .contact .linkedin {
+    width: 30%;
+    margin-top: unset;
+  }
+  footer .content .contact .linkedin .contact-person h3 {
+    font-size: 0.8em;
+  }
+  footer .content .contact .linkedin .contact-person p {
+    font-size: 0.6em;
+  }
+  footer .content .contact .git {
+    width: 30%;
+  }
+  footer .content .contact .git .contact-person h3 {
+    font-size: 0.8em;
+  }
+  footer .content .contact .git .contact-person p {
+    font-size: 0.6em;
+  }
+  footer .content .contact img {
+    width: 18px;
+    margin-right: 10px;
+    margin-top: -4px;
+  }
+  footer .content .contact-form form {
+    margin-top: 10px;
+    margin-left: 8px;
+  }
+  footer .content .contact-form form input {
+    margin-right: 15px;
+  }
+  footer .content .contact-form form textarea {
+    height: 120px;
+  }
+  footer .content .contact-form button {
+    font-size: 0.9em !important;
+  }
+  footer .content .foto {
+    display: none;
   }
 }
 
