--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit:wght@200;500&family=Poppins:wght@400;600&display=swap");
 // file scss
-$f-poppins: "Poppins", sans-serif;
-$f-kanit: "Kanit", sans-serif;
+$f-poppins: "Poppins",
+sans-serif;
+$f-kanit: "Kanit",
+sans-serif;
 $color-01: #0a002c;
 $color-02: #ffffff;
 $color-03: #107020;
@@ -22,11 +24,9 @@ $font-18: 18px;
 
 @mixin grd-color() {
   background: rgb(205, 250, 250);
-  background: linear-gradient(
-    0deg,
-    rgba(205, 250, 250, 1) 0%,
-    rgba(136, 224, 224, 1) 100%
-  );
+  background: linear-gradient(0deg,
+      rgba(205, 250, 250, 1) 0%,
+      rgba(136, 224, 224, 1) 100%);
 }
 
 @mixin judul-h3() {
@@ -128,21 +128,41 @@ $font-18: 18px;
   width: 94%;
 }
 
-@mixin port-col {
-  // display: block;
-}
-@mixin port-banner {
-  position: relative;
-  // max-width: 800em;
-  // width: 100%;
-  height: 280px;
-  // background-color: rgb(241, 241, 2);
-  z-index: 2;
-  img {
-    border-radius: 10px 10px 0px 0px;
-    width: 100%;
-    height: 250px;
+
+@mixin row {
+  display: block;
+  width: 25%;
+  margin-top: 10vh;
+  height: auto;
+  height: 400px;
+  cursor: pointer;
+  border-radius: 60px 0px 60px 0px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
+
+  &:hover {
+    transform: scale(1.02);
+    transition: 0.5s;
   }
+}
+
+@mixin col-banner {
+  overflow: hidden;
+  // position: relative;
+  height: 240px;
+
+  background-color: rgb(241, 241, 2);
+  img {
+    border-radius: 60px 0px 0px 0px;
+    width: 350px;
+    height: auto;
+  }
+}
+
+@mixin port-col {
+  // background-color: yellowgreen;
+  padding-top: 20px;
+  height: auto;
 }
 
 @mixin port-content {
@@ -151,6 +171,7 @@ $font-18: 18px;
   width: 90%;
   // background-color: yellow;
   margin-left: 15px;
+
   h3 {
     text-align: left;
     font-weight: normal;
@@ -159,14 +180,16 @@ $font-18: 18px;
     text-transform: capitalize;
     font-size: 1.6em;
   }
+
   p {
     display: inline-block;
     text-align: left;
-    
+
     width: auto;
     font-size: 0.9em;
     // background-color: bisque;
   }
+
   h4 {
     display: flex;
     // justify-content: center;
@@ -174,11 +197,13 @@ $font-18: 18px;
     font-size: 0.9em;
     margin-top: 20px;
     text-transform: capitalize;
+
     a {
       font-weight: normal;
       color: #0000ff;
       text-decoration: none;
     }
+
     img {
       margin-left: 8px;
       width: 15px;
@@ -186,11 +211,14 @@ $font-18: 18px;
     }
   }
 }
+
 @mixin cont-670 {
   width: auto;
+
   p {
     font-size: 1.1em;
   }
+
   h4 {
     margin-top: 10px;
   }
@@ -203,11 +231,36 @@ $font-18: 18px;
     // background-color: lawngreen;
     font-size: 0.8em;
   }
+
   h4 {
-    font-size: 0.7em;
+    font-size: 0.8em;
     margin-top: 12px;
+
     img {
-      width: 10px;
+      width: 12px;
+    }
+  }
+}
+
+// footer
+@mixin contact-person() {
+  .contact-person {
+    font-size: 0.9em;
+    margin-right: 20px;
+
+    p {
+      color: #adadad;
+    }
+  }
+}
+
+@mixin contact-person() {
+  .contact-person{
+    h3{
+      font-size: 0.8em;
+    }
+    p{
+      font-size: 0.6em;
     }
   }
 }
