--- a/scss/style.scss
+++ b/scss/style.scss
@@ -752,6 +752,7 @@ footer {
         button {
           background-color: #04aa6d;
           width: 40%;
+          float: left;
           color: white;
           padding: 12px 5px;
           border: none;
@@ -759,16 +760,33 @@ footer {
           border-radius: 6px;
           cursor: pointer;
           float: left;
+          margin-right: 20px;
           font-size: 1.1em;
+          box-shadow: rgb(1, 71, 19) -4px 3px 2px 0px;
+
+          &:active {
+            position: relative;
+            top: 7px;
+            box-shadow: none;
+          }
 
           &:hover {
-            background-color: #45a049;
+            background-color: #00a149;
           }
 
           img {
             margin-left: 10px;
             width: 7%;
           }
+        }
+        .alert{
+          display: none;
+          // h4{
+          //   // padding-right: 10px;
+          //   margin-top: 10px;
+          //   // background-color: #f6faff;
+          //   color: #05ff75;
+          // }
         }
       }
     }
