--- a/scss/style.scss
+++ b/scss/style.scss
@@ -696,11 +696,21 @@ footer {
         margin: 30px auto;
         color: $color-02;
         @include contact-person();
+        a{
+          color: #02eb21;
+          text-decoration: none;
+          font-size: 0.8em;
+        }
       }
 
       .git {
         color: $color-02;
         @include contact-person();
+        a{
+          color: #02eb21;
+          text-decoration: none;
+          font-size: 0.8em;
+        }
       }
 
       img {
@@ -781,12 +791,6 @@ footer {
         }
         .alert{
           display: none;
-          // h4{
-          //   // padding-right: 10px;
-          //   margin-top: 10px;
-          //   // background-color: #f6faff;
-          //   color: #05ff75;
-          // }
         }
       }
     }
